# podcaster-ai

./: .gitmodules  LICENSE  README.md  audio_playback.ipynb  bkb_analysis.ipynb  pyproject.toml  pyproject.toml.poetry  requirements.txt  scripts.py  setup.py
data/: gimlet_midlevel_topic_bkb-data.lz4  stopwords.csv
models/: gimlet_collapsed.bkb
podcaster_ai/: detection.py  midlevel_features.py  scripts.py  segmentation.py  separation.py  topic.py
podcaster_ai/pipelines/: detect_and_segment.py
podcaster_ai/util/: 2  mp.py  spotify_data.py
tests/: example-1.txt  example-2.txt  example-3.txt  test_detection.py  test_pipelines.py  test_segmentation.py  test_separation.py  test_util.py
