[tool.poetry]
name = "podcaster-ai"
version = "0.1.0"
description = "Project analyzing podcast scores with explainable AI and deep learning."
authors = ["Chase Yakaboski <chase.th@dartmouth.edu>"]
packages = [{include = "podcaster_ai"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
boxsdk = {extras = ["jwt"], version = "^3.4.0"}
pandas = "^1.4.3"
tqdm = "^4.64.0"
SoundFile = "^0.10.3"
numpy = "^1.23.1"
librosa = "^0.9.2"
tensorflow = "^2.9.1"
pydub = "^0.25.1"
demucs = "^3.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test_all = 'scripts:test'
test_util = 'scripts:test_util'
test_detection = 'scripts:test_detection'
test_segmentation = 'scripts:test_segmentation'
test_separation = 'scripts:test_separation'
test_pipelines = 'scripts:test_pipelines'
fileids = 'scripts:fileids'
