[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "podcaster-ai"
version = "0.0.1"
description = "A tool for processing and analyzing podcast scores to understand composer's style, preferences, and intent in the context of podcast musical compositions."
authors = [
  {name = "Chase Yakaboski", email = "chase.th@dartmouth.edu"}
  ]
license = {text = "MIT License"}
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
test_detection = 'podcaster_ai.scripts:test_detection'